# cookieStealer

./: CMakeLists.txt  README.md  main.cpp
tools/: TypeUtil.cpp  TypeUtil.h  cookies.cpp  cookies.h
